[package]
name = "nordic"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common", default-features = false }
executor = { path = "../executor", default-features = false }
peripherals = { path = "../peripherals", default-features = false }
crypto = { path = "../crypto", default-features = false }
protobuf = { path = "../protobuf", default-features = false }
macros = { path = "../macros" }
usb = { path = "../usb", default-features = false }

[build-dependencies]
protobuf_compiler = { path = "../protobuf_compiler" }