[package]
name = "nordic"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common", default-features = false }
executor = { path = "../executor", default-features = false }
peripherals = { path = "../peripherals", default-features = false }
crypto = { path = "../crypto", default-features = false }
protobuf = { path = "../protobuf", default-features = false }
macros = { path = "../macros" }
usb = { path = "../usb", default-features = false }
nordic_proto = { path = "../nordic_proto", default-features = false }
cnc = { path = "../cnc", default-features = false }
math = { path = "../math", default-features = false }

[features]
default = ["std", "alloc"]
alloc = ["common/alloc", "nordic_proto/alloc", "executor/alloc", "crypto/alloc", "protobuf/alloc", "usb/alloc", "cnc/alloc", "math/alloc"]
std = ["common/std", "nordic_proto/alloc", "nordic_proto/std", "executor/alloc", "crypto/std", "protobuf/std", "usb/std", "cnc/std", "math/std"]