[package]
name = "nordic_tools"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
protobuf = { path = "../protobuf" }
macros = { path = "../macros" }
usb = { path = "../usb" }
nordic_proto = { path = "../nordic_proto" }

[build-dependencies]
protobuf_compiler = { path = "../protobuf_compiler" }