[package]
name = "parsing_compiler"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
protobuf = { path = "../protobuf" }
macros = { path = "../macros" }

[build-dependencies]
protobuf_compiler = { path = "../protobuf_compiler" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []